Added HTTP Server to test being able to wake the device up with a network packet

--- a/WakeLock_WifiLock_Exerciser/app/build.gradle
+++ b/WakeLock_WifiLock_Exerciser/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
+    compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
 }
