--- a/WakeLock_WifiLock_Exerciser/app/build.gradle
+++ b/WakeLock_WifiLock_Exerciser/app/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    //  The compile versions are left commented for testing on 'O' where the background optimization
+    //  option does not appear for apps compiled with 26+
+//    compileSdkVersion 25
+//    buildToolsVersion "25.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.darryncampbell.wakelockexample"
         minSdkVersion 21
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.2"
+//        targetSdkVersion 25
+        targetSdkVersion 26
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,9 +36,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+//    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.1'
+//    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:design:26+'
     testCompile 'junit:junit:4.12'
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
