--- a/WakeLock_WifiLock_Exerciser/app/src/main/AndroidManifest.xml
+++ b/WakeLock_WifiLock_Exerciser/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <service
             android:name=".MyIntentService"
-            android:exported="false" />
+            android:exported="true" />
         <service
             android:name=".MyAlarmHandler"
             android:exported="false"></service>
