--- a/WakeLock_WifiLock_Exerciser/app/build.gradle
+++ b/WakeLock_WifiLock_Exerciser/app/build.gradle
@@ -30,18 +30,18 @@ dependencies {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
     def sdkDir = properties.getProperty('sdk.dir')
-    provided fileTree(include: ['com.symbol.emdk.jar'], dir: sdkDir+'/add-ons/addon-symbol_emdk-symbol-23/libs/')
+    compileOnly fileTree(include: ['com.symbol.emdk.jar'], dir: sdkDir+'/add-ons/addon-symbol_emdk-symbol-23/libs/')
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 //    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:26+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:26+'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 //    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:design:26+'
-    testCompile 'junit:junit:4.12'
-    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
-    compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
+    implementation 'com.android.support:design:26+'
+    testImplementation 'junit:junit:4.12'
+    implementation group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
+    implementation group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
 }
