--- a/WakeLock_WifiLock_Exerciser/app/build.gradle
+++ b/WakeLock_WifiLock_Exerciser/app/build.gradle
@@ -6,13 +6,13 @@ android {
     //  option does not appear for apps compiled with 26+
 //    compileSdkVersion 25
 //    buildToolsVersion "25.0.1"
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.darryncampbell.wakelockexample"
         minSdkVersion 21
 //        targetSdkVersion 25
-        targetSdkVersion 26
-        versionCode 2
+        targetSdkVersion 28
+        versionCode 3
         versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -37,10 +37,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 //    compile 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:appcompat-v7:26+'
+    implementation 'com.android.support:appcompat-v7:28+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 //    compile 'com.android.support:design:25.3.1'
-    implementation 'com.android.support:design:26+'
+    implementation 'com.android.support:design:28+'
     testImplementation 'junit:junit:4.12'
     implementation group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     implementation group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
