--- a/WakeLock_WifiLock_Exerciser/app/build.gradle
+++ b/WakeLock_WifiLock_Exerciser/app/build.gradle
@@ -1,26 +1,32 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    //  The compile versions are left commented for testing on 'O' where the background optimization
-    //  option does not appear for apps compiled with 26+
-//    compileSdkVersion 25
-//    buildToolsVersion "25.0.1"
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.darryncampbell.wakelockexample"
         minSdkVersion 21
-//        targetSdkVersion 25
-        targetSdkVersion 28
-        versionCode 3
-        versionName "2.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 29
+        versionCode 4
+        versionName "3.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/androidx.localbroadcastmanager_localbroadcastmanager.version'
+        exclude 'META-INF/proguard/androidx-annotations.pro'
     }
 }
 
@@ -33,15 +39,13 @@ dependencies {
     compileOnly fileTree(include: ['com.symbol.emdk.jar'], dir: sdkDir+'/add-ons/addon-symbol_emdk-symbol-23/libs/')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    compile 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.android.support:appcompat-v7:28+'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    compile 'com.android.support:design:25.3.1'
-    implementation 'com.android.support:design:28+'
-    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     implementation group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
+    implementation 'com.google.android.material:material:1.0.0'
 }
